src/tests/ci/assignment_6_advanced_features/invalid_semantic/05_struct_ptr.c
#include <stdio.h>

struct Node {
    int value;
    int count;
};

typedef int Node;

int main() {
    struct Node node;
    node.value = 5;

    node->value = 10;

    struct Node* ptr;
    ptr = &node;

    ptr->data = 99;

    return 0;
}